# mangadotnet-downloader

./: README.md  pyproject.toml
src/manga_dotnet/: __init__.py  __main__.py
src/manga_dotnet/api/: __init__.py  chapters.py  client.py  images.py  manga.py  search.py  volumes.py
src/manga_dotnet/cli/: __init__.py  app.py  error_handler.py
src/manga_dotnet/cli/commands/: __init__.py  batch.py  download.py  history.py  info.py  interactive.py  library.py  search.py  settings_cmd.py  updates.py
src/manga_dotnet/cli/prompts/: __init__.py
src/manga_dotnet/cli/widgets/: __init__.py  chapter_table.py  manga_panel.py  progress.py  search_results.py  splash.py  theme.py
src/manga_dotnet/core/: __init__.py  cache.py  config.py  engine.py  exceptions.py  history.py  models.py  updates.py
src/manga_dotnet/download/: __init__.py  progress.py  retry.py  speed.py
src/manga_dotnet/export/: __init__.py  base.py  cbz.py  cleanup.py  folder.py  images.py  pdf.py  zip.py
src/manga_dotnet/gui/: __init__.py  app.py  error_handler.py  main_window.py  sidebar.py
src/manga_dotnet/gui/pages/: __init__.py  downloads_page.py  history_page.py  manga_detail_page.py  open_url_page.py  settings_page.py
src/manga_dotnet/gui/themes/: __init__.py  dark.py  light.py  midnight.py
src/manga_dotnet/gui/widgets/: __init__.py  chapter_list.py  download_panel.py  manga_card.py  search_widget.py
src/manga_dotnet/utils/: __init__.py  async_helpers.py  console.py  filesystem.py  http.py  image.py  text.py
tests/: conftest.py  test_config.py  test_download_worker.py  test_engine.py  test_exceptions.py  test_integration.py  test_library.py  test_models.py
