[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manga-dotnet-downloader"
version = "1.0.0"
description = "A beautiful, modern manga downloader for MangaDotNet with CLI and GUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "xYui" },
]
keywords = ["manga", "downloader", "mangadotnet", "cli", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Utilities",
]
dependencies = [
    # Cloudflare bypass
    "undetected-chromedriver>=3.5.0",

    # Data Models
    "pydantic>=2.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",

    # Export
    "img2pdf>=0.5.0",
    "PyMuPDF>=1.24.0",

    # Config — JSON (stdlib, no extra dependency needed)

    # Utilities
    "Pillow>=10.0.0",
    "packaging>=24.0.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.7.0",
    "PyQt6-WebEngine>=6.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
mdnet = "manga_dotnet.cli.app:main"
mdnet-gui = "manga_dotnet.gui.app:main"

[project.urls]
Homepage = "https://github.com/Yui007/mangadotnet-downloader"
Repository = "https://github.com/Yui007/mangadotnet-downloader"
Issues = "https://github.com/Yui007/mangadotnet-downloader/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/manga_dotnet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
